--- a/public/style.css
+++ b/public/style.css
@@ -5,14 +5,13 @@
     color: rgb(44, 44, 44);
 }
 
+body{
+    background: #191919;
+}
+
 .container {
     max-width: 1517px;
     margin-top: 100px;
-    box-shadow: 0 0 11px 2px rgb(36, 36, 36);
-}
-
-.container .col-12 {
-    background: #64a2ff;
 }
 
 #navbarTogglerDemo02 {
@@ -26,22 +25,19 @@
 }
 
 #temploy {
-    background: #67d5ff;
+    background: #ffffff;
     box-shadow: inset 0 0 7px 1px rgb(97, 97, 97);
 }
 
 .boxbig {
-    width: 100%;
-    height: 749px;
+    width: 973px;
+    height: 737px;
     margin-top: 13px;
 }
 
 .texttop {
     width: 100%;
     height: 363px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     position: relative;
 }
 
@@ -64,6 +60,9 @@
     height: 100%;
     text-align: end;
     padding-right: 19px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .fst_n {
@@ -149,7 +148,7 @@
 }
 
 .boxbig {
-    background: #f4fffa;
+    background: #ffffff;
     text-shadow: 0 0 5px rgb(173, 192, 223);
 }
 
