--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -23,17 +23,19 @@
             </div>
           </div>
           <div class="weathinfo">
-            <span class="fst_n"></span>
-            <div class="info_day"></div>
-            <div class="divalign"><span class="blok2">Issiqlik:<span class="fst_r"></span></span><span
-                class="deg">&deg;C</span></div>
-            <div class="divalign"><span class="blok2">Namlik:<span class="fst_h"></span></span><span
-                class="ffle">%</span></div>
-            <div class="divalign"><span class="blok2">Bosim:<span class="fst_y"></span></span></div>
+            <div class="flbox">
+              <span class="fst_n"></span>
+              <div class="info_day"></div>
+              <div class="divalign"><span class="blok2">Issiqlik:<span class="fst_r"></span></span><span
+                  class="deg">&deg;C</span></div>
+              <div class="divalign"><span class="blok2">Namlik:<span class="fst_h"></span></span><span
+                  class="ffle">%</span></div>
+              <div class="divalign"><span class="blok2">Bosim:<span class="fst_y"></span></span></div>
+            </div>
           </div>
         </div>
         <hr>
-        <div class="weath_bottom">
+        {{!-- <div class="weath_bottom">
           <div class="div" name="current">
             <div class="left_inner">
               <span class="sef_c">Qo'shimcha malumot kunlik</span>
@@ -54,7 +56,7 @@
               <span class="fvg_j">Qo'shimcha malumot kunlik</span>
             </div>
           </div>
-        </div>
+        </div> --}}
       </div>
     </div>
   </div>
