API ulash tugadi ma'lumotlar olindi
API tugadi

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -24,8 +24,11 @@
           </div>
           <div class="weathinfo">
             <div class="flbox">
-              <span class="fst_n"></span>
-              <div class="info_day"></div>
+              <div class="fdce">
+                <span class="fst_n">
+                </span>
+                <div class="info_day"></div>
+              </div>
               <div class="divalign"><span class="blok2">Issiqlik:<span class="fst_r"></span></span><span
                   class="deg">&deg;C</span></div>
               <div class="divalign"><span class="blok2">Namlik:<span class="fst_h"></span></span><span
