--- a/public/style.css
+++ b/public/style.css
@@ -5,8 +5,14 @@
     color: rgb(44, 44, 44);
 }
 
-body{
-    background: #191919;
+.col-12 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+body {
+    background: #ffffff;
 }
 
 .container {
@@ -20,30 +26,37 @@ body{
     justify-content: space-around;
 }
 
+.flbox {
+    width: 746px;
+    height: 100%;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
+
 .form-control {
     width: 700px;
 }
 
-#temploy {
-    background: #ffffff;
-    box-shadow: inset 0 0 7px 1px rgb(97, 97, 97);
+.container-fluid{
+    background: #bfbfbf;
 }
 
 .boxbig {
-    width: 973px;
-    height: 737px;
-    margin-top: 13px;
+    width: 762px;
+    height: 464px;
+    margin-top: 3px;
 }
 
 .texttop {
     width: 100%;
-    height: 363px;
+    height: 294px;
     position: relative;
 }
 
 .city {
     width: 657px;
-    height: 100%;
+    height: 96%;
     padding-left: 11px;
 }
 
@@ -51,12 +64,12 @@ body{
     font-size: 53px;
     font-family: 'Varela Round', sans-serif;
     letter-spacing: 5px;
-    color: rgb(44, 44, 44);
+    color: rgb(147 45 45);
     border-bottom: 1px solid;
 }
 
 .weathinfo {
-    width: 531px;
+    width: 100%;
     height: 100%;
     text-align: end;
     padding-right: 19px;
@@ -66,30 +79,37 @@ body{
 }
 
 .fst_n {
-    text-align: center;
     font-family: 'Varela Round', sans-serif;
     font-size: 63px;
     letter-spacing: 1px;
     color: rgb(44, 44, 44);
-    border-bottom: 1px solid;
     filter: drop-shadow(0 0 5px #000);
+    width: 100%;
+    height: 111px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.fst_n img {
+    width: 151px;
 }
 
 .fst_h {
     text-align: end;
     font-family: 'Varela Round', sans-serif;
-    font-size: 53px;
+    font-size: 37px;
     letter-spacing: 1px;
-    color: rgb(44, 44, 44);
+    color: rgb(11 0 187);
     padding-left: 9px;
 }
 
 .fst_r {
     text-align: end;
     font-family: 'Varela Round', sans-serif;
-    font-size: 53px;
+    font-size: 37px;
     letter-spacing: 1px;
-    color: rgb(44, 44, 44);
+    color: rgb(11 0 187);
     padding-left: 9px;
 }
 
@@ -107,15 +127,17 @@ body{
     display: flex;
     align-items: center;
     justify-content: end;
+    margin-left: 19px;
+    border-bottom: 1px solid;
 }
 
 .fst_y {
     text-align: end;
     font-family: 'Varela Round', sans-serif;
-    font-size: 41px;
+    font-size: 37px;
     letter-spacing: 1px;
     margin-top: 11px;
-    color: rgb(44, 44, 44);
+    color: rgb(11 0 187);
     padding-left: 9px;
 }
 
@@ -126,7 +148,7 @@ body{
     font-size: 23px;
     letter-spacing: 3px;
     padding-left: 19px;
-    color: rgb(44, 44, 44);
+    color: rgb(11 0 187);
 }
 
 .hbs_s {
@@ -135,7 +157,7 @@ body{
     font-size: 23px;
     letter-spacing: 3px;
     padding-left: 19px;
-    color: rgb(44, 44, 44);
+    color: rgb(11 0 187);
 }
 
 .hbs_d {
@@ -144,11 +166,11 @@ body{
     font-size: 23px;
     letter-spacing: 3px;
     padding-left: 19px;
-    color: rgb(44, 44, 44);
+    color: rgb(11 0 187);
 }
 
 .boxbig {
-    background: #ffffff;
+    background: #eff9ff;
     text-shadow: 0 0 5px rgb(173, 192, 223);
 }
 
@@ -243,6 +265,7 @@ hr {
 
 .current_info .blok {
     border-bottom: 1px solid;
+    color: #0040b5;
 }
 
 .city_info {
@@ -255,6 +278,9 @@ hr {
     font-size: 19px;
     letter-spacing: 2px;
     border-bottom: 1px solid;
+    width: 100%;
+    padding-left: 220px;
+
 }
 
 .deg {
@@ -294,6 +320,7 @@ hr {
     font-family: 'Varela Round', sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
+    color: #2d87c7;
 }
 
 .flextre {
@@ -307,11 +334,28 @@ hr {
     font-size: 63px;
     font-family: 'Varela Round', sans-serif;
     padding-right: 19px;
+    color: #198bdb;
 }
 
-.info_day{
+.info_day {
     font-family: 'Varela Round', sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
-    margin-right: 7px;
+    margin-right: -8px;
+    display: list-item;
+}
+
+.info_day::marker {
+    color: red;
+}
+
+.fdce {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.fdce .info_day {
+    flex-direction: column;
 }
