--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -17,7 +17,7 @@
                 type="submit"
               >Search</button>
             </form>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light">
               <div class="container-fluid">
                 <a class="navbar-brand" href="#">Navbar</a>
                 <button
