--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-12">
+    <div class="col-6">
       <div class="boxbig">
         <div class="texttop">
           <div class="city">
@@ -8,7 +8,8 @@
               <span class="countrinfo"></span>
               <div class="frominfo"></div>
             </div>
-            <div class="city_info">
+            <div class="city_info" style="position: relative;">
+              <div class="post" style="position: absolute; top: 0; right: -43px;">BU KUN</div>
               <span class="city_info_map"></span>
               <span class="city_length_info"></span>
             </div>
@@ -38,28 +39,139 @@
           </div>
         </div>
         <hr>
-        {{!-- <div class="weath_bottom">
-          <div class="div" name="current">
-            <div class="left_inner">
-              <span class="sef_c">Qo'shimcha malumot kunlik</span>
-              <span class="sef_g">Qo'shimcha malumot kunlik</span>
-            </div>
-            <div class="right_inner">
-              <span class="fvg_g">Qo'shimcha malumot kunlik</span>
-              <span class="fvg_j">Qo'shimcha malumot kunlik</span>
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="boxbig2">
+        <div class="texttop2">
+          <div class="flexbox">
+            <div class="info_day_top">Juma</div>
+            <div class="day1">
+              <div class="left_box">
+                <span class="frff_l">Harorat : <span class="day124324q"></span>&degC</span>
+                <span class="frff_ff">Namlik : <span class="day242323q"></span> %</span>
+              </div>
+              <div class="weather_info">
+
+              </div>
+              <div class="right_box">
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                      class="day312443q">1 </span></span></div>
+                <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
+                      class="day4234q"></span></span></div>
+              </div>
             </div>
           </div>
-          <div class="div" name="current">
-            <div class="left_inner">
-              <span class="sef_c">Qo'shimcha malumot kunlik</span>
-              <span class="sef_g">Qo'shimcha malumot kunlik</span>
-            </div>
-            <div class="right_inner">
-              <span class="fvg_g">Qo'shimcha malumot kunlik</span>
-              <span class="fvg_j">Qo'shimcha malumot kunlik</span>
+          <div class="flexbox">
+            <div class="info_day_top">Shanba</div>
+            <div class="day1">
+              <div class="left_box">
+                <span class="frff_l2">Harorat : <span class="day124324w"></span>&degC</span>
+                <span class="frff_ff2">Namlik : <span class="day242323w"></span> %</span>
+              </div>
+              <div class="weather_info2">
+
+              </div>
+              <div class="right_box">
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                      class="day312443w">1 </span></span></div>
+                <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
+                      class="day4234w"></span></span></div>
+              </div>
             </div>
           </div>
-        </div> --}}
+          <div class="flexbox">
+            <div class="info_day_top">Yakshanba</div>
+            <div class="day1">
+              <div class="left_box">
+                <span class="frff_l3">Harorat : <span class="day124324e"></span>&degC</span>
+                <span class="frff_ff2">Namlik : <span class="day242323e"></span> %</span>
+              </div>
+              <div class="weather_info3">
+
+              </div>
+              <div class="right_box">
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                      class="day312443e">1 </span></span></div>
+                <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
+                      class="day4234e"></span></span></div>
+              </div>
+            </div>
+          </div>
+          <div class="flexbox">
+            <div class="info_day_top">Dushanba</div>
+            <div class="day1">
+              <div class="left_box">
+                <span class="frff_l4">Harorat : <span class="day124324r"></span>&degC</span>
+                <span class="frff_ff2">Namlik : <span class="day242323r"></span> %</span>
+              </div>
+              <div class="weather_info4">
+
+              </div>
+              <div class="right_box">
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                      class="day312443r">1 </span></span></div>
+                <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
+                      class="day4234r"></span></span></div>
+              </div>
+            </div>
+          </div>
+          <div class="flexbox">
+            <div class="info_day_top">Seshanba</div>
+            <div class="day1">
+              <div class="left_box">
+                <span class="frff_l5">Harorat : <span class="day124324t"></span>&degC</span>
+                <span class="frff_ff2">Namlik : <span class="day242323t"></span> %</span>
+              </div>
+              <div class="weather_info5">
+
+              </div>
+              <div class="right_box">
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                      class="day312443t">1 </span></span></div>
+                <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
+                      class="day4234t"></span></span></div>
+              </div>
+            </div>
+          </div>
+          <div class="flexbox">
+            <div class="info_day_top">Chorshanba</div>
+            <div class="day1">
+              <div class="left_box">
+                <span class="frff_l6">Harorat : <span class="day124324y"></span>&degC</span>
+                <span class="frff_ff2">Namlik : <span class="day242323y"></span> %</span>
+              </div>
+              <div class="weather_info6">
+
+              </div>
+              <div class="right_box">
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                      class="day312443y">1 </span></span></div>
+                <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
+                      class="day4234y"></span></span></div>
+              </div>
+            </div>
+          </div>
+          <div class="flexbox">
+            <div class="info_day_top">Payshanba</div>
+            <div class="day1">
+              <div class="left_box">
+                <span class="frff_l7">Harorat : <span class="day124324u"></span>&degC</span>
+                <span class="frff_ff2">Namlik : <span class="day242323u"></span> %</span>
+              </div>
+              <div class="weather_info7">
+
+              </div>
+              <div class="right_box">
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                      class="day312443u">1 </span></span></div>
+                <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
+                      class="day4234u"></span></span></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr>
       </div>
     </div>
   </div>
