--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -55,7 +55,7 @@
 
               </div>
               <div class="right_box">
-                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi(m/s) : <span
                       class="day312443q">1 </span></span></div>
                 <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
                       class="day4234q"></span></span></div>
@@ -73,7 +73,7 @@
 
               </div>
               <div class="right_box">
-                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi(m/s) : <span
                       class="day312443w">1 </span></span></div>
                 <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
                       class="day4234w"></span></span></div>
@@ -91,7 +91,7 @@
 
               </div>
               <div class="right_box">
-                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi(m/s) : <span
                       class="day312443e">1 </span></span></div>
                 <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
                       class="day4234e"></span></span></div>
@@ -109,7 +109,7 @@
 
               </div>
               <div class="right_box">
-                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi(m/s) : <span
                       class="day312443r">1 </span></span></div>
                 <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
                       class="day4234r"></span></span></div>
@@ -127,7 +127,7 @@
 
               </div>
               <div class="right_box">
-                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi(m/s) : <span
                       class="day312443t">1 </span></span></div>
                 <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
                       class="day4234t"></span></span></div>
@@ -145,7 +145,7 @@
 
               </div>
               <div class="right_box">
-                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi(m/s) : <span
                       class="day312443y">1 </span></span></div>
                 <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
                       class="day4234y"></span></span></div>
@@ -163,7 +163,7 @@
 
               </div>
               <div class="right_box">
-                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi : <span
+                <div style="display: flex; justify-content: flex-end;"><span class="feeef_l">Shamol tezligi(m/s) : <span
                       class="day312443u">1 </span></span></div>
                 <div style="display: flex; justify-content: end;"> <span class="fewg_ff">Bosim : <span
                       class="day4234u"></span></span></div>
